Fix Vercel routing for SPA - rewrite all routes to index.html

--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,11 @@
   "outputDirectory": "dist",
   "env": {
     "VITE_API_URL": "https://backendmatrix.onrender.com/api"
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
