Fix Vercel config: remove conflicting routes property

--- a/vercel.json
+++ b/vercel.json
@@ -26,37 +26,8 @@
   ],
   "rewrites": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html",
-      "has": [
-        {
-          "type": "header",
-          "key": "accept",
-          "value": "text/html"
-        }
-      ]
-    }
-  ],
-  "routes": [
-    {
-      "src": "/sitemap.xml",
-      "dest": "/sitemap.xml"
-    },
-    {
-      "src": "/robots.txt",
-      "dest": "/robots.txt"
-    },
-    {
-      "src": "/ritzlogo.png",
-      "dest": "/ritzlogo.png"
-    },
-    {
-      "src": "/favicon.png",
-      "dest": "/favicon.png"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/((?!sitemap.xml|robots.txt|ritzlogo.png|favicon.png|assets).*)",
+      "destination": "/index.html"
     }
   ]
 }
